dark mode typewriter skipping fix

--- a/src/components/TypeWriter/TypeWriter.css
+++ b/src/components/TypeWriter/TypeWriter.css
@@ -3,7 +3,6 @@ body {
 }
 
 #cursor {
-  border-left: .1em solid #09110b;
   animation: blink .7s steps(1) infinite;
 }
 
